--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
@@ -6,43 +6,51 @@
   <title>Política de Privacidad - Ofertas del Container</title>
   <style>
     body{font-family:Arial,sans-serif;max-width:820px;margin:40px auto;padding:0 16px;line-height:1.6;color:#222;}
-    h1,h2{color:#111;}
+    h1,h2{color:#111; border-bottom: 1px solid #eee; padding-bottom: 10px;}
     small{color:#666;}
+    .contact-box { background: #f9f9f9; padding: 15px; border-radius: 8px; border: 1px solid #ddd; }
   </style>
 </head>
 <body>
   <h1>Política de Privacidad</h1>
   <p><small>Última actualización: 28/01/2026</small></p>
 
-  <p>En Ofertas del Container respetamos tu privacidad. Esta política describe cómo tratamos los datos de los usuarios que nos contactan por WhatsApp y otros canales.</p>
+  <p>En <strong>Ofertas del Container</strong> respetamos tu privacidad y cumplimos con las políticas de plataformas de terceros (Meta/Facebook). Esta política describe cómo tratamos los datos de los usuarios que interactúan con nuestras herramientas de atención.</p>
 
-  <h2>Datos que recopilamos</h2>
+  <h2>1. Datos que recopilamos</h2>
+  <p>Cuando utilizas nuestros servicios a través de Meta (Facebook/WhatsApp), podemos recopilar:</p>
   <ul>
-    <li>Nombre y número de teléfono.</li>
-    <li>Mensajes y contenido compartido por el usuario.</li>
-    <li>Etiquetas o estado de conversación en nuestro CRM (Chatwoot).</li>
+    <li>Nombre, apellido y número de teléfono.</li>
+    <li>Identificadores de usuario únicos proporcionados por la plataforma de Meta.</li>
+    <li>Historial de mensajes y etiquetas de estado en nuestro sistema CRM.</li>
   </ul>
 
-  <h2>Cómo usamos los datos</h2>
+  <h2>2. Cómo usamos los datos</h2>
   <ul>
-    <li>Responder consultas y brindar información sobre productos.</li>
-    <li>Gestionar conversaciones y mejorar la atención al cliente.</li>
+    <li>Proveer soporte técnico y responder consultas sobre productos.</li>
+    <li>Gestionar el seguimiento de ventas y mejorar la experiencia de usuario.</li>
+    <li>Cumplir con requerimientos legales o de seguridad.</li>
   </ul>
 
-  <h2>Compartición de datos</h2>
-  <p>No vendemos datos. Podemos usar servicios de terceros (por ejemplo, proveedores de mensajería o IA) para operar la atención, siempre con fines de servicio.</p>
+  <h2>3. Compartición de datos</h2>
+  <p>No vendemos ni alquilamos tus datos a terceros. Los datos solo se procesan a través de herramientas internas de gestión (CRM) y servicios de mensajería oficiales para la prestación del servicio solicitado.</p>
 
-  <h2>Conservación</h2>
-  <p>Conservamos los datos mientras sea necesario para la atención y seguimiento del cliente, o hasta que se solicite su eliminación.</p>
+  <h2>4. Instrucciones para la eliminación de datos (Data Deletion)</h2>
+  <p>De acuerdo con las políticas de Meta, proporcionamos a los usuarios un mecanismo claro para solicitar la eliminación de sus datos:</p>
+  <div class="contact-box">
+    <p>Para solicitar la eliminación definitiva de tus datos personales almacenados por nuestra aplicación, puedes elegir uno de estos métodos:</p>
+    <ul>
+      <li><strong>Correo electrónico:</strong> Envía un mensaje a <strong>alejandrorialapy@outlook.com</strong> con el asunto "Eliminar mis datos personales".</li>
+      <li><strong>Chat directo:</strong> Solicita la eliminación directamente a través de nuestra línea de WhatsApp de atención al cliente.</li>
+    </ul>
+    <p>Una vez recibida la solicitud, procederemos a borrar tu información de nuestros registros en un plazo máximo de 72 horas hábiles.</p>
+  </div>
 
-  <h2>Data Deletion / Eliminación de datos</h2>
-  <p>Si querés eliminar tus datos, escribinos a: <strong>alejandrorialapy@outlook.com</strong> con el asunto “Eliminar datos”.
-  También podés solicitarlo directamente por WhatsApp.</p>
-
-  <h2>Contacto</h2>
+  <h2>5. Contacto</h2>
+  <p>Si tienes dudas sobre esta política, contáctanos en:</p>
   <p>Email: <strong>alejandrorialapy@outlook.com</strong></p>
 
-  <h2>Términos básicos</h2>
-  <p>El servicio se brinda “tal cual”. Nos reservamos el derecho de actualizar la información y responder en horarios comerciales.</p>
+  <h2>6. Cambios en esta política</h2>
+  <p>Nos reservamos el derecho de actualizar esta política para cumplir con nuevos requisitos legales o de las plataformas de Meta. Te recomendamos revisar esta página periódicamente.</p>
 </body>
 </html>
